Fix small spacing problems

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -25,7 +25,8 @@
 .logo {
   font-size: 24px;
   font-weight: bold;
-  margin: 2rem 0;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .selector {
@@ -113,42 +114,14 @@
   margin-top: 0.5em;
 }
 
-@media (min-width: 583px) {
-  .logo {
-    margin: 3rem 0;
-  }
-
-  .selector-item {
-    font-size: 14px;
-  }
-
-  .first-circle {
-    width: 390px;
-    height: 390px;
-  }
-
-  .second-circle {
-    width: 355px;
-    height: 355px;
-  }
-
-  .timer {
-    font-size: 95px;
-  }
-
-  .controller {
-    font-size: 16px;
-    letter-spacing: 15px;
-  }
-}
-
 .settings-icon {
   cursor: pointer;
-  margin-bottom: 2em;
+  margin-bottom: 0em;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 1em;
 }
 
 .settings-bg {
@@ -166,7 +139,7 @@
 .settings-container {
   background-color: white;
   width: 90%;
-  height: 85%;
+  height: 90%;
   max-width: 540px;
   border-radius: 10px;
   overflow: scroll;
@@ -219,15 +192,13 @@
   padding: 0 1.5em;
   h3 {
     text-align: center;
-    margin: 1em 0;
   }
 }
 
 .duration {
   font-size: 11px;
   letter-spacing: 4px;
-  margin-top: 2em;
-  padding-bottom: 1em;
+  padding: 2em 0;
   width: 100%;
   border-bottom: 1px solid #979797;
   .input-container {
@@ -235,7 +206,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin-bottom: 1em;
+    margin: 1.5em 0;
     p {
       color: #979797;
       letter-spacing: 0em;
@@ -290,7 +261,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 2em;
+    margin-bottom: 1.5em;
   }
   .font-option {
     border-radius: 50%;
